Made info cards open and close on click as well as on hover. Fixed a bug which caused navigation menu to not render correctly on smaller devices

--- a/src/Components/InfoCard/InfoCard.scss
+++ b/src/Components/InfoCard/InfoCard.scss
@@ -14,4 +14,16 @@
   border-radius: 0.5rem;
   padding: 1rem;
   box-shadow: 0.2rem 0.2rem 0.5rem 1px $dark-mixed-500;
+
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 0.5rem;
+
+  i {
+    font-size: 2rem;
+    background-color: #fff;
+    color: rgb(0, 174, 255);
+    border-radius: 100%;
+  }
 }
